Bug 382051 - Does not build with NetworkManager-1.0
Summary: Does not build with NetworkManager-1.0
Status: RESOLVED FIXED
Alias: None
Product: frameworks-networkmanager-qt
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-06 12:58 UTC by Fabian Vogt
Modified: 2017-07-10 05:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch (1.03 KB, patch)
2017-07-06 12:58 UTC, Fabian Vogt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2017-07-06 12:58:33 UTC
Created attachment 106459 [details]
Patch

Despite CMakeLists.txt claiming that it builds with NetworkManager-1.0 as well, it does not.

[   76s] In file included from /home/abuild/rpmbuild/BUILD/networkmanager-qt-5.36.0git.20170630T235743~a885ae7/src/utils.h:31:0,
[   76s]                  from /home/abuild/rpmbuild/BUILD/networkmanager-qt-5.36.0git.20170630T235743~a885ae7/src/utils.cpp:22:
[   76s] /home/abuild/rpmbuild/BUILD/networkmanager-qt-5.36.0git.20170630T235743~a885ae7/src/settings/wirelesssetting.h:57:28: error: 'NM_SETTING_WIRELESS_POWERSAVE_DEFAULT' was not declared in this scope
[   76s]          PowerSaveDefault = NM_SETTING_WIRELESS_POWERSAVE_DEFAULT,
[   76s]                             ^
[   76s] /home/abuild/rpmbuild/BUILD/networkmanager-qt-5.36.0git.20170630T235743~a885ae7/src/settings/wirelesssetting.h:58:27: error: 'NM_SETTING_WIRELESS_POWERSAVE_IGNORE' was not declared in this scope
[   76s]          PowerSaveIgnore = NM_SETTING_WIRELESS_POWERSAVE_IGNORE,
[   76s]                            ^
[   76s] /home/abuild/rpmbuild/BUILD/networkmanager-qt-5.36.0git.20170630T235743~a885ae7/src/settings/wirelesssetting.h:59:28: error: 'NM_SETTING_WIRELESS_POWERSAVE_DISABLE' was not declared in this scope
[   76s]          PowerSaveDisable = NM_SETTING_WIRELESS_POWERSAVE_DISABLE,
[   76s]                             ^
[   76s] /home/abuild/rpmbuild/BUILD/networkmanager-qt-5.36.0git.20170630T235743~a885ae7/src/settings/wirelesssetting.h:60:27: error: 'NM_SETTING_WIRELESS_POWERSAVE_ENABLE' was not declared in this scope
[   76s]          PowerSaveEnable = NM_SETTING_WIRELESS_POWERSAVE_ENABLE

A patch that fixes the issue is attached.
Comment 1 Jan Grulich 2017-07-10 05:32:48 UTC
Git commit dcaaef525c83685897223f1dd02c043bfe568d5d by Jan Grulich.
Committed on 10/07/2017 at 05:32.
Pushed by grulich into branch 'master'.

Fix undefined NM_SETTING_WIRELESS_POWERSAVE_FOO enums

M  +4    -4    src/settings/wirelesssetting.h

https://commits.kde.org/networkmanager-qt/dcaaef525c83685897223f1dd02c043bfe568d5d