Fix undefined NM_SETTING_WIRELESS_POWERSAVE_FOO enums

BUG:382051